--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cycle-rental-app",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
