--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~51.0.0",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.0",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.7.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.0",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native": "0.74.5",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
     "react-native-webview": "13.8.6",
     "typescript": "~5.3.3"
