--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
     "react-native-webview": "13.8.6",
+    "sharp": "^0.34.5",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
