--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/auth": "^23.5.0",
     "expo": "~51.0.0",
     "expo-constants": "~16.0.2",
+    "expo-firebase-recaptcha": "^2.3.1",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.0",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.7.1",
+    "firebase": "^10.14.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-razorpay": "^2.3.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
     "react-native-webview": "13.8.6",
