--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~51.0.0",
     "expo-constants": "~16.0.2",
+    "expo-image-picker": "^17.0.9",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.0",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.7.1",
+    "firebase-admin": "^11.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
