--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~51.0.0",
     "expo-constants": "~16.0.2",
-    "expo-file-system": "^19.0.20",
-    "expo-image-picker": "^17.0.9",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.1.0",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.0",
