--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
